# aept

./: .gitignore  CLAUDE.md  COPYING  Makefile.am  NOTICE  README.md  aept.1.scd  configure.ac
debian/: aept.dirs  aept.install  aept.manpages  changelog  control  copyright  libaept-dev.install  libaept0.install  rules
include/aept/: aept.h  archive.h  autoremove.h  clash.h  clean.h  conffile.h  config.h  download.h  install.h  internal.h  msg.h  owner_index.h  pin.h  query.h  remove.h  script.h  solver.h  status.h  trigger.h  update.h  util.h  verify.h
libfetch/: common.c  http.c
patches/: libfetch-fixes.patch
python/: pyproject.toml
python/aeltra/aept/: __init__.py  _cdef.py  _marshalling.py
python/aept/: _cdef.py  _ffi.py  aept.py
python/examples/: demo.py
scripts/: update-libfetch.sh  update-readme.sh
src/: Makefile.am  api.c  archive.c  autoremove.c  clash.c  clean.c  conffile.c  config.c  download.c  install.c  main.c  msg.c  owner_index.c  pin.c  query.c  remove.c  script.c  solver.c  status.c  trigger.c  update.c  util.c  verify.c
