ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src

aeptincludedir = $(includedir)/aept
aeptinclude_HEADERS = \
    include/aept/aept.h \
    include/aept/archive.h \
    include/aept/autoremove.h \
    include/aept/clean.h \
    include/aept/conffile.h \
    include/aept/config.h \
    include/aept/download.h \
    include/aept/install.h \
    include/aept/msg.h \
    include/aept/pin.h \
    include/aept/query.h \
    include/aept/remove.h \
    include/aept/script.h \
    include/aept/solver.h \
    include/aept/status.h \
    include/aept/update.h \
    include/aept/util.h \
    include/aept/verify.h
